# assembly

./: CMakeLists.txt
include/assembly/: assembly.hpp  test.hpp
src/: CMakeLists.txt  assembly.cpp  loop.s  passing_four_parameters.s  passing_one_parameter.s  passing_three_parameters.s  passing_two_parameters.s  sum.s  test.asm  test.cpp  test.s
test/CMakeScripts/: ReRunCMake.make
tests/: CMakeLists.txt  test.cpp  testlib.cpp
tests/include/: test.hpp
